# platy-paste-backend

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-compose.yml.example  main.py  requirements.txt
.github/workflows/: checks.yml  publish.yml  tests.yml
.sqlx/: query-001b5cc1bd354f0b2367c1ed23c14e4cf68fb44bb138a9e835e45530a86572ed.json  query-039c82e4065e2d8b8c4c282e26169f755ba97b9eae850adbd7878c3988f1abf1.json  query-0505a319c107feaa6d0b0d3d686a8af2a793a2dbe90f896b8bd1a2e7a88900d6.json  query-065d9d120ac213f7e1eee8ae142365e142aa738638b308f1d71c555f909e63f1.json  query-0a91e150b86dda76bccc5f1a54bd4d482b64895de62557c46be97977ff80aceb.json  query-0c54ff27e3aeaa14b82d0fd4bb2eb1e23219e63f92a6f81847135d08e4db4f42.json  query-0d0b15bed1df9aebbf3233eef7a00f7d59ab650413c9d2a9e7b1adeee1f3d37e.json  query-0d1841efcf5239b354c8fa257572261cf1e639ca3627b22ee6c1fe5d651c9398.json  query-124a536c71cacd115da87893683da194572a036c7975f4defb5116194bb8d683.json  query-12aafcfcef36b2730c5711a015de88e37143d644b89a7f4ffe6775a5f12e45af.json  query-139a679b14b7d02aa34429c2cf241875622d13589ba4833077b07be949fb5ef7.json  query-1fa59c1faa3e3fcecdc9aa6dc091e0b2b44f3dbd2ceb944ff06c13517972c978.json  query-225bda3f8a724021ad07e1efbd867e294ffe10b895050d74cb01993b64c450f0.json  query-228a88541191c36e871b595bfdbea54c12996771b48ca11a83b659d50fe9a43b.json  query-2d16ba813bc12ec469e48a8a67a1d51b5edb4963488d581e4ad2aa22087138c5.json  query-2f2c5989d022a812f79b9caca85258ff588cf408455b8870552b69308f19a348.json  query-3f63da8b8d191162b6055e0c3bf00aa76f97056d03f02ab439d2a510be7358a5.json  query-42ae4f9a57b0e7d8c972912a8cfa5ca54fc4276c4e1bed0ab2a5a2bf693cc54f.json  query-496ac0312c5865597c7318b2c409f5cbb4ea6fd4e85925925e8496adf5fd446f.json  query-4c70757d07dba3bc531d3b9e9f5a811104c211d3b005e56d24c487b396467aaf.json  query-4f1048fc24534f9a5b168a943fe75701dbf15ef4f9eceebcdcd7b145642def7f.json  query-57a59fd1363c26b9f0fc3afd3008e2a86d425a8aafe95f674ceb83cbf7d4e506.json  query-57f9e73fa8539ce5d38f8e6be1a821c175fe3f6540e0460bfd18b472853b4a1a.json  query-59803511eecb30f47b778b8bc67956a4add7c289daa3c4ecb38a642fa9553dd7.json  query-64887bb6c49a5c21253fabcea7567e02ce544e1f29b61d602a9f38d4125e7920.json  query-6a238908cb9d1f3a739d7976711527c67f37fc5ac75c82fe511fdaa073963b98.json  query-6e9d771fe2ecf167140f5990942aa83e069931f294d0d1e6a3283fdc155dc1ce.json  query-812239b6487c811e7f23e967a029048da1e80d9283f4eaf39e65bbe5f2c773f8.json  query-87f92bc0620f679f5e6c3b1ea4b4b74375a633d0c301470bdf9bc266186c5c64.json  query-8bf88e0414246a743d4e28ceb91750298a92c07482e84e1d23b82939e1a67bb8.json  query-8c348d93c1a1d19cdfd00d204f7fdbb1f5e9e5d0a3067f7653885e68e432f4d9.json  query-91d1f34ff45f06d5c272f4f0141bb76193384dd4c0354d73e896184c3e783ad1.json  query-9370b7fad6c66c0158e80cf908a0fffd06e373a169257acc8292b2a71352c402.json  query-95a4102b03c5735fb0cec4ef2157e109cc456ecdb2a1966782b00ac93182fb70.json  query-965765c623f2fee4e06169fe48b2250bde311d9bf6d3af0a8001110a4ca8225f.json  query-96d5741aa4da0953c72b20e7f914348b951e8708c59fa8afc311059c3408a59f.json  query-9919272eed80fe8e83b93af67b498a6e898a770af59434f4478bd2a98e1dbfce.json  query-992f3a1eb1078ff96b5cc70ad62dd1575c26366e42febbb881d832eef398ed7f.json  query-9eca14483b2452c61f47b72a862573bbb512aa94d61cac964b4dc0a3e1bf62c3.json  query-a0ad90869897855c9dfa29bcb56a95053caf011b26d6b8c4f131a17842cd9261.json  (+20 more)
backend/: Cargo.toml
backend/migrations/: 001_users.sql  002_snowflake.sql  003_pastes.sql
backend/src/app/: app.rs  database.rs  s3.rs
backend/src/models/: document.rs  paste.rs  snowflake.rs  token.rs
backend/src/rest/: admin.rs  oauth.rs
migrations/: 001_accounts.sql  001_pastes.sql  002_pastes.sql
src/: lib.rs  main.rs
src/app/: application.rs  config.rs  database.rs  handler.rs  mod.rs  object_store.rs  s3.rs
src/models/: account.rs  authentication.rs  document.rs  error.rs  errors.rs  mod.rs  paste.rs  payload.rs  snowflake.rs  undefined.rs
src/models/payload/: config.rs  document.rs  information.rs  mod.rs  paste.rs
src/rest/: account.rs  bot.rs  config.rs  document.rs  information.rs  mod.rs  paste.rs  user.rs
templates/: edit.html  list.html  login.html  nav.html  settings.html  view.html
tests/: models_authentication_test.rs  models_document_test.rs  models_paste_test.rs  models_snowflake_test.rs
tests/fixtures/: documents.sql  pastes.sql  tokens.sql
