[package]
name = "platy-paste"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
# This is not really a library
async_fn_in_trait = "allow"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
significant_drop_tightening = { level = "allow", priority = 1 }
module_name_repetitions = "allow"
# This is just dumb
must_use_candidate = "allow"
# Sadly sqlx macros do not play nicely with clippy
missing_panics_doc = "allow"
# Platy doesn't document her code
missing_errors_doc = "allow"
# When impl Trait can be used in type aliases, remove this
future_not_send = "allow"
# Doesn't play nicely with tokio::select!
redundant_pub_crate = "allow"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
# Network
axum = { version = "0.8", features = ["multipart", "json", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = [
    "limit",
    "cors",
    "trace",
    "fs",
    "timeout",
] }
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    'env-filter',
    'local-time',
] }
tracing-appender = "0.2"
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "tls-rustls", "time"] }
aws-config = "1.5"
aws-sdk-s3 = "1.76"
# Payload
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
secrecy = { version = "0.10", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
bytes = "1.10"
thiserror = "2.0"
dotenvy = "0.15"
color-eyre = "0.6"
derive_builder = "0.20"
base64 = "0.22"
time = { version = "0.3", features = ["serde"] }
bitflags = { version = "2.8", features = ["serde"] }
getrandom = "0.3"
http = "1.3"
regex = "1.11"
tower_governor = "0.7"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3

# Enable incremental compilation for dev builds to improve re-compilation time.
[profile.dev]
incremental = true

# Enable LTO for release builds to reduce binary size.
[profile.release]
lto = true
