[package]
name = "Platy-Paste"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async
tokio = { version = "1.39", features = ["full"] }
# Network
axum = { version = "0.7", features = ["multipart", "json", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.6.2", features = ["limit", "cors", "trace", "fs", "timeout"] }
# Tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ['env-filter', 'local-time']}
tracing-appender = "0.2"
# Database
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid" ] }
aws-config = "1.5"
aws-sdk-s3 = "1.76"
# Payload
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
secrecy = { version = "0.10", features = ["serde"] }


# Unsorted, might be removed.
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }

#tokio-stream = "0.1"
#tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"
# Networking
#
#tokio-tungstenite = { version = "0.26", features = ["native-tls"]}
#native-tls = "0.2"
# Tracing

# Datatypes
#uuid = { version = "1.9", features = ["serde", "v4"] }
#mime = "0.3"
bytes = "1.10"
thiserror = "2.0.11"
dotenvy = "0.15"
#color-eyre = "0.6" 
derive_builder = "0.20"
#futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
#futures-channel = "0.3"
#futures = "0.3"
#rand = "0.9.0"
base64 = "0.22"
#headers = "0.4"
#regex = "1.11.1"
time = "0.3"
#toml = "0.8"
bitflags = { version = "2.8", features = ["serde"] }
getrandom = "0.3.1"
#snowflake = { version = "1.2", features = ["serde_support"] }