[package]
name = "Platy-Paste"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
# Network
axum = { version = "0.8", features = ["multipart", "json", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = [
    "limit",
    "cors",
    "trace",
    "fs",
    "timeout",
] }
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    'env-filter',
    'local-time',
] }
tracing-appender = "0.2"
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
aws-config = "1.5"
aws-sdk-s3 = "1.76"
# Payload
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
secrecy = { version = "0.10", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
bytes = "1.10"
thiserror = "2.0"
dotenvy = "0.15"
color-eyre = "0.6"
derive_builder = "0.20"
base64 = "0.22"
time = "0.3"
bitflags = { version = "2.8", features = ["serde"] }
getrandom = "0.3"
